# embag

./: BUILD  MODULE.bazel  README.md  WORKSPACE
.devcontainer/: devcontainer.json  setup.sh
embag_echo/: BUILD  embag_echo.cc
