# MODULE.bazel
module(
    name = "embag",
    version = "0.42.0",
)

bazel_dep(name = "lz4", version = "1.9.4")
bazel_dep(name = "bzip2", version = "1.0.8.bcr.2")
bazel_dep(name = "boost.fusion", version = "1.87.0")
bazel_dep(name = "boost.iostreams", version = "1.87.0")
bazel_dep(name = "boost.program_options", version = "1.87.0")
bazel_dep(name = "boost.spirit", version = "1.87.0")
bazel_dep(name = "boost.variant", version = "1.87.0")
